fix gap, form onsubmit, nav links

--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -20,7 +20,8 @@
   &__info {
     display: grid;
     row-gap: 24px;
-    justify-content: start;
+    align-content: start;
+    align-items: start;
 
     grid-column: 1 / 2;
 
